[tool.poetry]
name = "myProject"
version = "0.1.0"
description = "Test Project"
authors = ["adityas-ni <aditya.saxena@ni.com>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "myProject", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
